Update template files to use scope.lookupvar() and update some params. More work needed here though.
Signed-off-by: Leif Madsen <leif@leifmadsen.com>

--- a/openldap/templates/frontend.erb
+++ b/openldap/templates/frontend.erb
@@ -1,24 +1,24 @@
 # Create top-level object in domain
-dn: <%= openldap_domain %>
+dn: <%= scope.lookupvar('openldap::params::openldap_domain') %>
 objectClass: top
 objectClass: dcObject
 objectclass: organization
-o: <%= openldap_organization %>
-dc: <%= openldap_dc %>
-description: <%= openldap_description %>
+o: <%= scope.lookupvar('openldap::params::openldap_organization') %>
+dc: <%= scope.lookupvar('openldap::params::openldap_dc') %>
+description: <%= scope.lookupvar('openldap::params::openldap_description') %>
 
 # Admin user.
-dn: cn=<%= openldap_rootdn %>,<%= openldap_domain %>
+dn: cn=<%= scope.lookupvar('openldap::params::openldap_rootdn') %>,<%= scope.lookupvar('openldap::params::openldap_domain') %>
 objectClass: simpleSecurityObject
 objectClass: organizationalRole
-cn: <%= openldap_rootdn %>
-description: <%= openldap_admin_description %>
-userPassword: <%= openldap_admin_passwd %>
+cn: <%= scope.lookupvar('openldap::params::openldap_rootdn') %>
+description: <%= scope.lookupvar('openldap::params::openldap_admin_description') %>
+userPassword: <%= scope.lookupvar('openldap::params::openldap_admin_passwd') %>
 
-dn: ou=people,<%= openldap_domain %>
+dn: ou=people,<%= scope.lookupvar('openldap::params::openldap_domain') %>
 objectClass: organizationalUnit
 ou: people
 
-dn: ou=groups,<%= openldap_domain %>
+dn: ou=groups,<%= scope.lookupvar('openldap::params::openldap_domain') %>
 objectClass: organizationalUnit
 ou: groups
